<resources>
    <string name="app_name">Stopwatch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_button_text">start</string>
    <string name="stop_button_text">stop</string>
    <string name="lap_button_text">lap</string>
    <string name="reset_button_text">reset</string>
    <string name="timer_text">00:00:000</string>
    <string name="lap_title_view_text">Lap %1$d</string>
    <string name="lap_details_view_text">%1$s</string>
</resources>
